--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,7 +84,7 @@ add_subdirectory (ZEToolSDK)
 add_subdirectory (ZEFoundation)
 add_subdirectory (ZE3dsMax)
 add_subdirectory (ZEditor)
-
+add_subdirectory (ZETests)
 ## PACKING
 #########################################################################################
 include(InstallRequiredSystemLibraries)
