FIX: ZEString integrated with ZEEntity. ADD: ZEBuild platform detection system added to CMakeFiles.
svn path=/trunk/; revision=595

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,24 +58,56 @@ set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /GL")
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /ZI")
 set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /ignore:4099")
 
-append_property(DIRECTORY PROPERTY COMPILE_DEFINITIONS 
-	ZE_ZINEK
-	ZE_ZINEK_VERSION_PLATFORM=ZE_VP_WIN32
-	ZE_ZINEK_VERSION_MAJOR=${ZINEK_VERSION_MAJOR}
-	ZE_ZINEK_VERSION_MINOR=${ZINEK_VERSION_MINOR}
-	ZE_ZINEK_VERSION_INTERNAL=${ZINEK_VERSION_INTERNAL}
-	ZE_ZINEK_VERSION_BUILD=${ZINEK_VERSION_BUILD})
 
-append_property(DIRECTORY PROPERTY COMPILE_DEFINITIONS_DEBUG 
-	ZE_DEBUG_ENABLED 
-	ZE_DEBUG_BREAK_ON_ERROR 
-	_ZE_DEBUG_BREAK_ON_WARNING
-	_ZE_DEBUG_ENABLE_MEMORY_CHECKS)
+## Platform Detection
+#########################################################################################
+message(STATUS "[ZEBuild] Detecting Platform.")
 
-set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR})
-set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR})
-set_property(GLOBAL PROPERTY USE_FOLDERS ON)
+if (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
+	set(ZINEK_BUILD_PLATFORM_CLASS "Windows")
+	if (${CMAKE_SIZEOF_VOID_P} EQUAL 4)
+		set(ZINEK_BUILD_PLATFORM "Win32")
+	else (${CMAKE_SIZEOF_VOID_P} EQUAL 4)
+		set(ZINEK_BUILD_PLATFORM "Win64")
+	endif (${CMAKE_SIZEOF_VOID_P} EQUAL 4)
+elseif (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+	set(ZINEK_BUILD_PLATFORM_CLASS "MacOSX")
+	if (${CMAKE_SIZEOF_VOID_P} EQUAL 4)
+		set(ZINEK_BUILD_PLATFORM "MacOSX32")
+	else (${CMAKE_SIZEOF_VOID_P} EQUAL 4)
+		set(ZINEK_BUILD_PLATFORM "MacOSX64")
+	endif (${CMAKE_SIZEOF_VOID_P} EQUAL 4)
+elseif (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
+	set(ZINEK_BUILD_PLATFORM_CLASS "Linux")
+	if (${CMAKE_SIZEOF_VOID_P} EQUAL 4)
+		set(ZINEK_BUILD_PLATFORM "Linux32")
+	else (${CMAKE_SIZEOF_VOID_P} EQUAL 4)
+		set(ZINEK_BUILD_PLATFORM "Linux64")
+	endif (${CMAKE_SIZEOF_VOID_P} EQUAL 4)
+elseif (${CMAKE_SYSTEM_NAME} MATCHES "Unix")
+	set(ZINEK_BUILD_PLATFORM_CLASS "Unix")
+	if (${CMAKE_SIZEOF_VOID_P} EQUAL 4)
+		set(ZINEK_BUILD_PLATFORM "Unix32")
+	else (${CMAKE_SIZEOF_VOID_P} EQUAL 4)
+		set(ZINEK_BUILD_PLATFORM "Unix64")
+	endif (${CMAKE_SIZEOF_VOID_P} EQUAL 4)
+else (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
+	message(SEND_ERROR "[ZEBuild] Platform is not supported. Operating System : ${CMAKE_SYSTEM_NAME}, Achitecture : ${CMAKE_SYSTEM_PROCESSOR}, Compiler : ${CMAKE_CXX_COMPILER}")
+endif (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
 
+set (ZINEK_BUILD_COMPILER ${CMAKE_CXX_COMPILER})
+set (ZINEK_BUILD_ARCHITECTURE ${CMAKE_SYSTEM_PROCESSOR})
+
+	set(ZINEK_BUILD_PLATFORM "Win x86")
+
+message(STATUS "[ZEBuild] Platform Class  : " ${ZINEK_BUILD_PLATFORM_CLASS})
+message(STATUS "[ZEBuild] Platform        : " ${ZINEK_BUILD_PLATFORM})
+message(STATUS "[ZEBuild] Architecture    : " ${ZINEK_BUILD_ARCHITECTURE})
+message(STATUS "[ZEBuild] Compiler        : " ${ZINEK_BUILD_COMPILER})
+message(STATUS "[ZEBuild] Platform detected.")
+
+## Directories
+#########################################################################################
 include_directories(
 	${PROJECT_SOURCE_DIR} 
 	${PROJECT_SOURCE_DIR}/Include 
@@ -90,13 +122,31 @@ include_directories(
 	${PROJECT_SOURCE_DIR}/Include/3dsMax/2010)
 	
 link_directories(
-	"${PROJECT_SOURCE_DIR}/Lib/Win x86"
-	"${PROJECT_SOURCE_DIR}/Lib/Win x86/$(Configuration)" 
-	"${PROJECT_SOURCE_DIR}/Lib/Win x86/DirectX" 
-	"${PROJECT_SOURCE_DIR}/Lib/Win x86/OpenAL" 
-	"${PROJECT_SOURCE_DIR}/Lib/Win x86/PhysX"
-	"${PROJECT_SOURCE_DIR}/Lib/Win x86/3dsMax/2010")
+	"${PROJECT_SOURCE_DIR}/Lib/${ZINEK_BUILD_PLATFORM}"
+	"${PROJECT_SOURCE_DIR}/Lib/${ZINEK_BUILD_PLATFORM}/Release" 
+	"${PROJECT_SOURCE_DIR}/Lib/${ZINEK_BUILD_PLATFORM}/DirectX" 
+	"${PROJECT_SOURCE_DIR}/Lib/${ZINEK_BUILD_PLATFORM}/OpenAL" 
+	"${PROJECT_SOURCE_DIR}/Lib/${ZINEK_BUILD_PLATFORM}/PhysX"
+	"${PROJECT_SOURCE_DIR}/Lib/${ZINEK_BUILD_PLATFORM}/3dsMax/2010")
 
+
+## Definitions
+#########################################################################################
+append_property(DIRECTORY PROPERTY COMPILE_DEFINITIONS 
+	ZE_ZINEK
+	ZE_ZINEK_VERSION_PLATFORM=ZE_VP_WIN32
+	ZE_ZINEK_VERSION_MAJOR=${ZINEK_VERSION_MAJOR}
+	ZE_ZINEK_VERSION_MINOR=${ZINEK_VERSION_MINOR}
+	ZE_ZINEK_VERSION_INTERNAL=${ZINEK_VERSION_INTERNAL}
+	ZE_ZINEK_VERSION_BUILD=${ZINEK_VERSION_BUILD})
+
+append_property(DIRECTORY PROPERTY COMPILE_DEFINITIONS_DEBUG 
+	ZE_DEBUG_ENABLED 
+	ZE_DEBUG_BREAK_ON_ERROR 
+	_ZE_DEBUG_BREAK_ON_WARNING
+	_ZE_DEBUG_ENABLE_MEMORY_CHECKS)
+	
+	
 ## Files
 #########################################################################################
 add_subdirectory (Source)
@@ -105,7 +155,9 @@ add_subdirectory (ZEFoundation)
 add_subdirectory (ZE3dsMax)
 add_subdirectory (ZEditor)
 add_subdirectory (ZETests)
-## PACKING
+
+
+## Packing
 #########################################################################################
 include(InstallRequiredSystemLibraries)
 
