CHG: ZEResourceFile, ZEFile, ZEFileCache, ZEPack moved to ZEFoundation. ADD: ZEProfiler added. ADD: ZEStateMachine added. IMP: Minor improvements on Initialization codes of modules.
svn path=/trunk/; revision=597

--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -74,7 +74,7 @@ add_source(ZECore/ZEWindowResources.rc	Sources)
 
 add_executable(ZE WIN32 ${Sources})
 set_property(TARGET ZE PROPERTY FOLDER "Zinek Engine")
-target_link_libraries(ZE ZECore ZEDS ZEFoundation ZESerialization ZEGame ZEGraphics ZEInput ZEMap ZEMath ZEMeta ZEModel ZEParticle ZEPhysics ZESound ZEUI)
+target_link_libraries(ZE ZECore ZEDS ZEFoundation ZESerialization ZEFile ZEGame ZEGraphics ZEInput ZEMap ZEMath ZEMeta ZEModel ZEParticle ZEPhysics ZESound ZEUI)
 target_link_libraries(ZE ZEDirect3D9 ZEWindowsInput ZEDirectSound ZEOpenAL ZEPhysX ZEVRPNInput ZEFreespaceInput ZEPortalMap freeimage.lib)
 
 add_library(ZESDK ${Sources})
