--- a/Source/ZECore/CMakeLists.txt
+++ b/Source/ZECore/CMakeLists.txt
@@ -35,6 +35,10 @@
 
 cmake_minimum_required (VERSION 2.8)
 
+add_source (ZEApplicationModule.cpp			Sources)
+add_source (ZEApplicationModule.h			Sources ZESDK)
+add_source (ZEApplicationModuleDescription.cpp		Sources)
+add_source (ZEApplicationModuleDescription.h		Sources ZESDK)
 add_source (ZEBase.cpp						Sources)
 add_source (ZEBase.h						Sources ZESDK)
 add_source (ZECommand.cpp					Sources)
@@ -49,10 +53,6 @@ add_source (ZEConsoleWindow.cpp				Sources)
 add_source (ZEConsoleWindow.h				Sources ZESDK)
 add_source (ZECore.cpp						Sources)
 add_source (ZECore.h						Sources ZESDK)
-add_source (ZEApplicationModule.cpp			Sources)
-add_source (ZEApplicationModule.h			Sources ZESDK)
-add_source (ZEApplicationModuleDescription.cpp		Sources)
-add_source (ZEApplicationModuleDescription.h		Sources ZESDK)
 add_source (ZEError.cpp						Sources)
 add_source (ZEError.h						Sources ZESDK)
 add_source (ZEExtension.cpp					Sources)
@@ -69,8 +69,6 @@ add_source (ZEModuleManager.cpp				Sources)
 add_source (ZEModuleManager.h				Sources ZESDK)
 add_source (ZEOption.cpp					Sources)
 add_source (ZEOption.h						Sources ZESDK)
-add_source (ZEFile.cpp			Sources)
-add_source (ZEFile.h			Sources ZESDK)
 add_source (ZEOptionManager.cpp				Sources)
 add_source (ZEOptionManager.h				Sources ZESDK)
 add_source (ZEOptionSection.cpp				Sources)
@@ -79,10 +77,12 @@ add_source (ZEPlugin.cpp					Sources)
 add_source (ZEPlugin.h						Sources ZESDK)
 add_source (ZEPluginManager.cpp				Sources)
 add_source (ZEPluginManager.h				Sources ZESDK)
+add_source (ZEProfiler.cpp					Sources)
+add_source (ZEProfiler.h					Sources ZESDK)
+add_source (ZEProfilerManager.cpp			Sources)
+add_source (ZEProfilerManager.h				Sources ZESDK)
 add_source (ZEResource.cpp					Sources)
 add_source (ZEResource.h					Sources ZESDK)
-add_source (ZEResourceFile.cpp				Sources)
-add_source (ZEResourceFile.h				Sources ZESDK)
 add_source (ZEResourceManager.cpp			Sources)
 add_source (ZEResourceManager.h				Sources ZESDK)
 add_source (ZESystemMessageManager.cpp		Sources)
