FIX: Compiler warnings fixed. ADD: ZEFlags class added. REM: ZEToolSDK types removed. Foundation types will be used. IMP: Improvements on ZEToolSDK coding style and source files.
svn path=/trunk/; revision=630

--- a/ZEFoundation/ZEDS/CMakeLists.txt
+++ b/ZEFoundation/ZEDS/CMakeLists.txt
@@ -41,6 +41,8 @@ add_source (ZEArray.cpp				Sources)
 add_source (ZEArray.h				Sources ZESDK)
 add_source (ZEDSDefinitions.cpp		Sources)
 add_source (ZEDSDefinitions.h		Sources ZESDK)
+add_source (ZEFlags.cpp				Sources)
+add_source (ZEFlags.h				Sources ZESDK)
 add_source (ZENamed.cpp				Sources)
 add_source (ZENamed.h				Sources ZESDK)
 add_source (ZEString.cpp			Sources)
