ADD: ZERealTimeClock, which contains time management functions, added to the core.
svn path=/trunk/; revision=639

--- a/Source/ZECore/CMakeLists.txt
+++ b/Source/ZECore/CMakeLists.txt
@@ -81,6 +81,8 @@ add_source (ZEProfiler.cpp					Sources)
 add_source (ZEProfiler.h					Sources ZESDK)
 add_source (ZEProfilerManager.cpp			Sources)
 add_source (ZEProfilerManager.h				Sources ZESDK)
+add_source (ZERealTimeClock.cpp				Sources)
+add_source (ZERealTimeClock.h				Sources ZESDK)
 add_source (ZEResource.cpp					Sources)
 add_source (ZEResource.h					Sources ZESDK)
 add_source (ZEResourceManager.cpp			Sources)
